--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
 		<div class="logo">
 		
 			<h1><a href="#">GONZO</a></h1>
-			<h1>This is an awesome file</h1>
+			<h1>This is the updated file.</h1>
+			<p>It is pretty awesome.</p>
 		
 		</div>
 
