--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 		<div class="logo">
 		
 			<h1><a href="#">GONZO</a></h1>
-			<h1>This is the updated file.</h1>
-			<p>It is pretty awesome.</p>
+			<h1>Page 1</h1>
+			<p>Also known as the index.html file.</p>
 		
 		</div>
 
